--- a/frontend/web/templates/productos.html
+++ b/frontend/web/templates/productos.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Listado de Productos</h1>
-    <button class="btn btn-primary">Nuevo Producto</button>
+    <a href="{% url 'crear_producto' %}" class="btn btn-primary">Nuevo Producto</a>
 </div>
 
 {% if error %}
