--- a/frontend/web/templates/productos.html
+++ b/frontend/web/templates/productos.html
@@ -5,7 +5,10 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Listado de Productos</h1>
-    <a href="{% url 'crear_producto' %}" class="btn btn-primary">Nuevo Producto</a>
+    <div class="btn-group">
+        <a href="{% url 'crear_categoria' %}" class="btn btn-outline-primary">Nueva Categoría</a>
+        <a href="{% url 'crear_producto' %}" class="btn btn-primary">Nuevo Producto</a>
+    </div>
 </div>
 
 {% if error %}
