Implementación de reportes historicos y movimientos extra

--- a/frontend/web/templates/caja/gestion.html
+++ b/frontend/web/templates/caja/gestion.html
@@ -52,8 +52,8 @@
                     <a href="{% url 'crear_documento' %}" class="btn btn-primary btn-lg">
                         <i class="bi bi-cart-plus"></i> Nueva Venta (POS)
                     </a>
-                    <button class="btn btn-outline-secondary" disabled>Registrar Movimiento Extra (Pronto)</button>
-                    <button class="btn btn-outline-info" disabled>Ver Reportes Históricos (Pronto)</button>
+                    <a href="{% url 'registrar_movimiento_caja' %}" class="btn btn-outline-secondary">Registrar Movimiento Extra</a>
+                    <a href="{% url 'ver_reportes_caja' %}" class="btn btn-outline-info">Ver Reportes Históricos</a>
                 </div>
             </div>
         </div>
