--- a/frontend/web/templates/caja/gestion.html
+++ b/frontend/web/templates/caja/gestion.html
@@ -50,7 +50,7 @@
             <div class="card-body">
                 <div class="d-grid gap-2">
                     <a href="{% url 'crear_documento' %}" class="btn btn-primary btn-lg">
-                        <i class="bi bi-cart-plus"></i> Nueva Venta (POS)
+                        <i class="bi bi-cart-plus"></i> Nueva Venta 
                     </a>
                     <a href="{% url 'registrar_movimiento_caja' %}" class="btn btn-outline-secondary">Registrar Movimiento Extra</a>
                     <a href="{% url 'ver_reportes_caja' %}" class="btn btn-outline-info">Ver Reportes Históricos</a>
